class CommercializationTransition:
    def __init__(self):
        self.plan = "This is a default plan."

    def develop_plan(self) -> str:
        """
        Develop a commercialization and transition plan.
        The actual implementation of this function will depend on the specific
        requirements of the project. For the purpose of this example, we will
        simply return a default plan.
        """
        # TODO: Replace the default plan with an actual implementation based on the project requirements.
        return self.plan
