## scoring_evaluation.py

from typing import Dict
from sklearn.metrics import precision_score, recall_score, f1_score

class ScoringEvaluation:
    def __init__(self):
        self.scores = {}

    def evaluate(self, vulnerability: str, patch: str) -> Dict[str, float]:
        """
        Evaluate a vulnerability and its patch.
        The actual implementation of this function will depend on the specific
        vulnerability, the patch, and the evaluation technique used. For the purpose of this
        example, we will simply return dummy precision, recall, and F1 scores.
        """
        # TODO: Replace the hardcoded values with actual computations based on the vulnerability and patch.
        y_true = [0, 1, 1, 0]  # Replace with actual values
        y_pred = [1, 1, 0, 0]  # Replace with actual values

        self.scores = {
            'vulnerability': vulnerability,
            'patch': patch,
            'precision': precision_score(y_true, y_pred),
            'recall': recall_score(y_true, y_pred),
            'f1': f1_score(y_true, y_pred)
        }
        return self.scores
